--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creating Form Contact</title>
     <link rel="stylesheet" href="style.css">
+    <script src="form.js"></script>
 </head>
 <body> 
     <body>
@@ -95,19 +96,20 @@
                     height: 100px;" >
                 </textarea>
             </div>
-    
-            <button style="
-                background-color: rgb(0, 0, 0); 
-                color:white;
-                margin-top: 15px;
-                margin-left: 320px;
-                border: none;
-                padding: 8px 30px;
-                border-radius: 5px;
-                font-size: 12px;
-                cursor:pointer">
-                Submit
-            </button>
+             <div class="btn">
+                <button style="
+                    background-color: rgb(0, 0, 0); 
+                    color:white;
+                    margin-top: 15px;
+                    margin-left: 320px;
+                    border: none;
+                    padding: 8px 30px;
+                    border-radius: 5px;
+                    font-size: 12px;
+                    cursor:pointer; "onclick="submitData()" type="button">
+                    Submit
+                </button>
+            </div>
 
         </form>
 
